--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@mui/system": "5.11.15",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@uiw/react-md-editor": "^3.20.5",
     "bootstrap": "^5.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "d3": "^7.8.5",
     "d3-force": "^3.0.0",
     "dat.gui": "^0.7.9",
@@ -30,8 +33,11 @@
     "react-force-graph-2d": "^1.23.1",
     "react-force-graph-3d": "^1.23.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-resizable-panels": "^2.0.9",
     "rehype-sanitize": "^5.0.1",
     "save": "^2.5.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.156.1",
     "three-spritetext": "^1.8.1",
     "zustand": "^4.5.0"
